Fix WebGL conformance2/textures/misc/copy-texture-image.html test

Add additional internal formats for CopyTexImage2D
Unsuppresses previously failing test

# for webgl2_conformance_expectations.py

Bug: 905531
Change-Id: Ib9f525afa0188def6464c9f6134efc0090825f6b
TBR: kbr@chromium.org
Cq-Include-Trybots: luci.chromium.try:win_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_angle_rel_ng;luci.chromium.try:win_angle_rel_ng
Reviewed-on: https://chromium-review.googlesource.com/c/1340369
Commit-Queue: Austin Eng <enga@chromium.org>
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611562}
Former-commit-id: 7eced3d15f7514cc42c55709d8490b1f3e1bb785